# expert-potato

./: .gitignore  CLONE_VOICE_README.md  Expert Potato.spec  HOT_RELOAD.md  LICENSE  ONLINE_AUDIO_EXTRACTION.md  OPTIMIZATION_README.md  README.md  build.bat  build.py  build_instructions.md  expert_potato.spec  main.py  pyproject.toml  pytest.ini  run_dev.bat  run_dev.py
.cursor/rules/: development-guidelines.mdc  feature-development.mdc  project-overview.mdc  quick-reference.mdc  ui-patterns.mdc
src/: main.py
src/config/: __init__.py  core.py  theme.py
src/core/: README.md  __init__.py  audio_extract_worker.py  config_manager.py  connectivity_checker.py  project_manager.py  state_manager.py  text_refine_worker.py
src/pages/: __init__.py  audio_analysis_page.py  extract_audio_page.py  extract_audio_resource.py  extract_text_page.py
src/pages/components/: __init__.py  extract_text_area.py  file_drop_area.py  refine_area.py
src/ui/: base_page.py  main_window.py  navigation.py  settings_dialog.py  title_bar.py
src/utils/: __init__.py  video_audio_extractor.py
tests/: E2E_QUICK_START.md  README.md  TESTING_GUIDE.md  TEST_EXAMPLES.md  base_test.py  config.py  run_tests.py  test_components.py  test_e2e_core_flow.py  test_e2e_pytest.py
tests/utils/: __init__.py  test_helpers.py
