[project]
name = "expert-potato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-Fluent-Widgets>=1.4.0",
    "faster-whisper>=1.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
