[project]
name = "expert-potato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-Fluent-Widgets>=1.4.0",
    "faster-whisper>=1.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "hupper>=1.12.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pyinstaller-hooks-contrib>=2024.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xvfb>=3.0.0"
]
video = [
    "moviepy>=1.0.3",
    "yt-dlp>=2023.12.30"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
